SERVER-10838 Fixed stability issues with multiple SSL connections